--- a/PiaSample/app/build.gradle
+++ b/PiaSample/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "eu.nets.pia.sample"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode Integer.parseInt(VERSION_CODE)
         versionName VERSION_NAME
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -55,6 +55,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 	implementation('eu.nets.pia:pia-sdk:1.3.1@aar') { transitive = true; changing=true; }
-
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 
 }
